manifests/workloads/traefik-helm/proxmox.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox-reverseproxy-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: pmx.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  type: ExternalName
  externalName: kube.danmanners.com
  sessionAffinity: None
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox-reverseproxy-web
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`virtualization.danmanners.com`)
      kind: Rule
      services:
        - name: proxmox
          kind: TraefikService
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
    - match: Host(`pmx.danmanners.com`)
      kind: Rule
      services:
        - name: proxmox
          kind: TraefikService
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox-reverseproxy-websecure
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`virtualization.danmanners.com`)
      kind: Rule
      services:
        - name: proxmox
          kind: TraefikService
    - match: Host(`pmx.danmanners.com`)
      kind: Rule
      services:
        - name: proxmox
          kind: TraefikService
  tls:
    secretName: proxmox-reverseproxy
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: kube-system
spec:
  ports:
  - name: https
    port: 8006
    protocol: TCP
    targetPort: 8006
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox
  namespace: kube-system
subsets:
- addresses:
  - ip: 10.45.0.10
  ports:
  - name: https
    port: 8006
    protocol: TCP
