manifests/workloads/traefik-helm/wikijs.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wikijs-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: wiki.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  type: ExternalName
  externalName: kube.danmanners.com
  sessionAffinity: None
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wikijs-web
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`wiki.danmanners.com`)
      kind: Rule
      services:
        - name: wikijs
          kind: TraefikService
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wikijs-websecure
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`wiki.danmanners.com`)
      kind: Rule
      services:
        - name: wikijs
          kind: TraefikService
  tls:
    secretName: wikijs
---
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: wikijs
  namespace: kube-system
subsets:
- addresses:
  - ip: 10.45.0.32
  ports:
  - name: http
    port: 80
    protocol: TCP
